--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
-  "scripts": {
+  "scripts": { 
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+   },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -37,6 +39,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "http://tzussman.github.io/esc-senate-website",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
