--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://tzussman.github.io/esc-senate-website",
+  "homepage": "http://tal4senate.com",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
